[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level1.gd" type="Script" id=4]
[ext_resource path="res://fonts/fixedsys.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="ParticlesMaterial" id=1]
resource_local_to_scene = true
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 4.123, 5.625, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.45
scale_random = 0.41
color = Color( 1, 0.372549, 0.25098, 1 )

[node name="Level1" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 120 )

[node name="DeathParticles" parent="Player" index="5"]
process_material = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -983032, 0, 0, -983031, 0, 0, -983030, 0, 0, -983029, 0, 0, -983028, 0, 0, -983027, 0, 0, -983026, 0, 0, -983025, 0, 0, -983024, 0, 0, -983023, 0, 0, -983022, 0, 0, -983021, 0, 0, -983020, 0, 0, -983019, 0, 0, -983018, 0, 0, -983017, 0, 0, -983016, 0, 0, -983015, 0, 0, -983014, 0, 0, -983013, 0, 0, -983012, 0, 0, -983011, 0, 0, -983010, 0, 0, -983009, 0, 0, -983008, 0, 0, -983007, 0, 0, -983006, 0, 0, -983005, 0, 0, -983004, 0, 0, -917496, 0, 0, -917468, 0, 0, -851960, 0, 0, -851959, 8, 0, -851933, 10, 0, -851932, 0, 0, -786424, 0, 0, -786423, 8, 0, -786397, 10, 0, -786396, 0, 0, -720888, 0, 0, -720887, 8, 0, -720861, 10, 0, -720860, 0, 0, -655352, 0, 0, -655351, 8, 0, -655346, 0, 0, -655345, 0, 0, -655344, 0, 0, -655343, 0, 0, -655342, 0, 0, -655337, 7, 0, -655325, 10, 0, -655324, 0, 0, -589816, 0, 0, -589815, 8, 0, -589811, 10, 0, -589810, 0, 0, -589806, 0, 0, -589805, 8, 0, -589802, 7, 0, -589801, 0, 0, -589800, 8, 0, -589789, 10, 0, -589788, 0, 0, -524280, 0, 0, -524279, 8, 0, -524275, 10, 0, -524274, 0, 0, -524270, 0, 0, -524269, 8, 0, -524267, 10, 0, -524266, 0, 0, -524265, 9, 0, -524253, 10, 0, -524252, 0, 0, -458744, 0, 0, -458743, 8, 0, -458739, 10, 0, -458738, 0, 0, -458734, 0, 0, -458733, 8, 0, -458730, 9, 0, -458717, 10, 0, -458716, 0, 0, -393208, 0, 0, -393207, 8, 0, -393203, 10, 0, -393202, 0, 0, -393198, 0, 0, -393197, 8, 0, -393190, 7, 0, -393181, 10, 0, -393180, 0, 0, -327672, 0, 0, -327671, 8, 0, -327667, 10, 0, -327666, 0, 0, -327662, 0, 0, -327661, 8, 0, -327655, 7, 0, -327654, 0, 0, -327653, 8, 0, -327645, 10, 0, -327644, 0, 0, -262136, 0, 0, -262135, 8, 0, -262131, 10, 0, -262130, 0, 0, -262126, 0, 0, -262125, 8, 0, -262120, 7, 0, -262119, 0, 0, -262118, 9, 0, -262109, 10, 0, -262108, 0, 0, -196600, 0, 0, -196599, 8, 0, -196595, 10, 0, -196594, 0, 0, -196590, 0, 0, -196589, 8, 0, -196585, 7, 0, -196584, 0, 0, -196583, 9, 0, -196573, 10, 0, -196572, 0, 0, -131064, 0, 0, -131063, 8, 0, -131059, 10, 0, -131058, 0, 0, -131054, 0, 0, -131053, 8, 0, -131050, 10, 0, -131049, 0, 0, -131048, 9, 0, -131037, 10, 0, -131036, 0, 0, -65528, 0, 0, -65527, 8, 0, -65523, 10, 0, -65522, 0, 0, -65518, 0, 0, -65517, 8, 0, -65513, 9, 0, -65501, 10, 0, -65500, 0, 0, 8, -1073741824, 0, 9, 8, 0, 13, 10, 0, 14, -1073741824, 0, 18, 0, 0, 19, 8, 0, 35, 10, 0, 36, 0, 0, 65536, -1073741824, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0, 131072, -1073741824, 0, 131116, 0, 0, 196608, -1073741824, 0, 196652, 0, 0, 262144, -1073741824, 0, 262188, 0, 0, 327680, -1073741824, 0, 327724, 0, 0, 393216, -1073741824, 0, 393260, 0, 0, 458752, -1073741824, 0, 458792, 12, 0, 458796, 0, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 15, 0, 524319, 16, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 1, 0, 524337, 15, 0, 655352, -1073741822, 0, 655353, 2, 0, 655354, 2, 0, 655355, 2, 0, 655356, 2, 0, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 18, 0, 589837, 14, 0, 589838, 14, 0, 589839, 14, 0, 589840, 14, 0, 589841, 14, 0, 589842, 14, 0, 589843, 14, 0, 589844, 14, 0, 589845, 14, 0, 589846, 14, 0, 589847, 14, 0, 589848, 14, 0, 589849, 14, 0, 589850, 14, 0, 589851, 14, 0, 589852, 14, 0, 589853, 14, 0, 589854, 14, 0, 589855, 17, 0, 589856, 2, 0, 589857, 2, 0, 589858, 2, 0, 589859, 2, 0, 589860, 2, 0, 589861, 2, 0, 589862, 2, 0, 589863, 2, 0, 589864, 2, 0, 589865, 2, 0, 589866, 2, 0, 589867, 2, 0, 589868, 2, 0, 589869, 2, 0, 589870, 2, 0, 589871, 2, 0, 589872, 2, 0, 589873, 18, 0, 720888, -1073741822, 0, 720889, 2, 0, 720890, 2, 0, 720891, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 18, 0, 655373, 13, 0, 655374, 13, 0, 655375, 13, 0, 655376, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 13, 0, 655389, 13, 0, 655390, 13, 0, 655391, 17, 0, 655392, 2, 0, 655393, 2, 0, 655394, 2, 0, 655395, 2, 0, 655396, 2, 0, 655397, 2, 0, 655398, 2, 0, 655399, 2, 0, 655400, 2, 0, 655401, 2, 0, 655402, 2, 0, 655403, 2, 0, 655404, 2, 0, 655405, 2, 0, 655406, 2, 0, 655407, 2, 0, 655408, 2, 0, 655409, 18, 0, 786424, -1073741822, 0, 786425, -1073741822, 0, 786426, -1073741822, 0, 786427, 2, 0, 786428, 2, 0, 786429, 2, 0, 786430, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 18, 0, 720909, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 13, 0, 720923, 13, 0, 720924, 13, 0, 720925, 13, 0, 720926, 13, 0, 720927, 17, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720938, 2, 0, 720939, 2, 0, 720940, 2, 0, 720941, 2, 0, 720942, 2, 0, 720943, 2, 0, 720944, 2, 0, 720945, 18, 0, 851960, 2, 0, 851961, 2, 0, 851962, 2, 0, 851963, 2, 0, 851964, 2, 0, 851965, 2, 0, 851966, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 18, 0, 786445, 13, 0, 786446, 13, 0, 786447, 13, 0, 786448, 13, 0, 786449, 13, 0, 786450, 13, 0, 786451, 13, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 786461, 13, 0, 786462, 13, 0, 786463, 17, 0, 786464, 2, 0, 786465, 2, 0, 786466, 2, 0, 786467, 2, 0, 786468, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786472, 2, 0, 786473, 2, 0, 786474, 2, 0, 786475, 2, 0, 786476, 2, 0, 786477, 2, 0, 786478, 2, 0, 786479, 2, 0, 786480, 2, 0, 786481, 18, 0, 917496, 2, 0, 917497, 2, 0, 917498, 2, 0, 917499, 2, 0, 917500, 2, 0, 917501, 2, 0, 917502, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 18, 0, 851981, 13, 0, 851982, 13, 0, 851983, 13, 0, 851984, 13, 0, 851985, 13, 0, 851986, 13, 0, 851987, 13, 0, 851988, 13, 0, 851989, 13, 0, 851990, 13, 0, 851991, 13, 0, 851992, 13, 0, 851993, 13, 0, 851994, 13, 0, 851995, 13, 0, 851996, 13, 0, 851997, 13, 0, 851998, 13, 0, 851999, 17, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 852010, 2, 0, 852011, 2, 0, 852012, 2, 0, 852013, 2, 0, 852014, 2, 0, 852015, 2, 0, 852016, 2, 0, 852017, 18, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 18, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 13, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 13, 0, 917529, 13, 0, 917530, 13, 0, 917531, 13, 0, 917532, 13, 0, 917533, 13, 0, 917534, 13, 0, 917535, 17, 0, 917536, 2, 0, 917537, 2, 0, 917538, 2, 0, 917539, 2, 0, 917540, 2, 0, 917541, 2, 0, 917542, 2, 0, 917543, 2, 0, 917544, 2, 0, 917545, 2, 0, 917546, 2, 0, 917547, 2, 0, 917548, 2, 0, 917549, 2, 0, 917550, 2, 0, 917551, 2, 0, 917552, 2, 0, 917553, 18, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Polygon2D" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 8, 8 )
color = Color( 0.141176, 0.631373, 0.611765, 1 )
polygon = PoolVector2Array( -128, -448, -128, -40, -128, 312, 824, 312, 824, -456 )
__meta__ = {
"_edit_group_": true
}

[node name="Cannon" parent="." instance=ExtResource( 2 )]
position = Vector2( 184, 88 )

[node name="Cannon2" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, -192 )

[node name="Cannon3" parent="." instance=ExtResource( 2 )]
position = Vector2( 520, -88 )

[node name="Cannon4" parent="." instance=ExtResource( 2 )]
position = Vector2( 392, 72 )

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 136.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "WASD TO MOVE
SPACE TO JUMP
CANNON GO FAST
SPACE TO LAUNCH
LAVA, SPIKES BAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="RichTextLabel" parent="."]
margin_left = 544.0
margin_top = 64.0
margin_right = 672.0
margin_bottom = 88.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "DOOR IS GOAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="door_touch" from="Player" to="." method="_on_Player_door_touch"]
[connection signal="player_death" from="Player" to="HUD" method="_on_Player_player_death"]
[connection signal="area_entered" from="Player/CannonCollisonDetector" to="." method="_on_CannonCollisonDetector_area_entered"]

[editable path="Player"]
